resolve contrast issues rgbo theme. *Accessibility

--- a/themes/Nottingham/rgbo/rgbo.css
+++ b/themes/Nottingham/rgbo/rgbo.css
@@ -318,7 +318,7 @@ a.hotspot, a.hotspot.selected {
   color: white !important; }
 
 .x_grid_page #grid ul li.static {
-  background: none;
+  background: #000000;
   border-color: transparent; }
 
 /*****timeline matching pairs*****/
