--- a/themes/Nottingham/rgbo/scss/_pagetypes.scss
+++ b/themes/Nottingham/rgbo/scss/_pagetypes.scss
@@ -341,7 +341,7 @@ a.hotspot, a.hotspot.selected {
   color:white !important;
 }
 .x_grid_page #grid ul li.static {
-  background: none;
+  background: $blackordarkest;
   border-color: transparent;
 }
 /*****timeline matching pairs*****/
